--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>My Resume<h1>
-    <h2>Adam Ziegele</h2>
+    <h2 style="color:red;font-size:99px;align:relative;">Adam Ziegele</h2>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m0!4v1503615022037!6m8!1m7!1szChzPIAn4RIAAAQvxgbyEg!2m2!1d29.56028532748453!2d-95.08539144618427!3f212.04!4f0!5f0.7820865974627469" width="1100" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
 
