--- a/index.html
+++ b/index.html
@@ -1,15 +1,78 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="portfolio.css">
 
   </head>
   <body>
-    <h1>My Resume<h1>
-    <h2 style="color:red;font-size:99px;align:relative;">Adam Ziegele</h2>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src = "portfolio.js"></script>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m0!4v1503615022037!6m8!1m7!1szChzPIAn4RIAAAQvxgbyEg!2m2!1d29.56028532748453!2d-95.08539144618427!3f212.04!4f0!5f0.7820865974627469" width="1100" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <div id="nav_wrap">
+    <h1 id="logo"><img class="logoPic" src="https://pbs.twimg.com/profile_images/714987253349658625/aJiq5dd5_400x400.jpg"></h1>
+    <nav role='navigation'>
+      <a href="#" id="home">Home</a><!--
+      ---><a href="#" id="about">About</a><!--
+      ---><a href="#" id="clients">Clients</a><!--
+      ---><a href="#" id="contact">Contact Us</a>
+    </nav>
+    <div id="social">
+      <div class="icon-facebook-sign"></div>
+      <div class="icon-twitter-sign"></div>
+    </div><!--/social-->
+  </div><!--/nav_wrap-->
 
-    <h1>About Me:<h1>
-      <p> I am a Software Developer at a start up company called Insiten.<p>
+  <section id="homesec" class="">
+    <!-- <div id="mainlogo">
+      LOGO<br /> -->
+      <div id="mainsocial">
+        <div class="icon-facebook-sign"></div>
+        <div class="icon-twitter-sign"></div>
+      </div>
+    </div>
+  </section><!--/home-->
+
+  <section id="aboutsec" class="bodysec">
+    <div id="copy">
+      <h1>About</h1>
+      <img src="http://placekitten.com/400/400" class="right">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi adipisci voluptas mollitia veritatis nesciunt soluta non minus eum quis odit iusto velit. Mollitia asperiores nam veniam aut eaque libero enim esse sunt. Id explicabo obcaecati minus animi at doloremque ratione atque sunt. Alias officiis quaerat eveniet reiciendis minima sequi accusamus ad mollitia optio totam fuga dolorem quasi facere ipsam blanditiis perspiciatis voluptatum. Temporibus quia eligendi in voluptate asperiores voluptatibus delectus consectetur eum necessitatibus perferendis aut hic vitae vel provident magni ipsa maxime. Hic harum a odit possimus laboriosam nihil qui? Inventore odio ad voluptatem explicabo accusamus omnis eum magnam saepe?Lorem ipsum dolor sit amet, consectetur adipisicing elit!<p></div>
+        </section>
+
+        <section id="clientsec" class="bodysec">
+          <div id="copy">
+            <h1>Clients</h1>
+            <div class="center large"><div class="icon-quote-left"></div> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi adipisci voluptas. <div class="icon-quote-right"></div></div>
+            <div id="iconrow">
+              <span class="icon-stack">
+  <i class="icon-circle icon-stack-base"></i>
+  <i class="icon-lightbulb icon-light"></i>
+</span>
+               <span class="icon-stack">
+  <i class="icon-circle icon-stack-base"></i>
+  <i class="icon-calendar icon-light"></i>
+</span>
+
+ <span class="icon-stack">
+  <i class="icon-circle icon-stack-base"></i>
+  <i class="icon-cogs icon-light"></i>
+</span>
+             <!-- <div class="icon-lightbulb inner-icon hoverblk"></div>-->
+             <!-- <div class="icon-calendar hoverblk"></div>-->
+<!--              <div class="icon-cogs hoverblk"></div>
+-->            </div>
+          </div>
+
+        </section>
+
+        <section id="contactsec">
+          <div id="copy">
+            <h1>Contact Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quasi optio deserunt consectetur aperiam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis porro accusantium aut ipsa eligendi quos perferendis veniam debitis rerum corporis nihil odit minus ullam deleniti dolorum! Nam itaque ipsum reiciendis. voluptate!</p>
+          </div>
+
+        </section>
+
   </body>
-</html>
+  </html>
