New Updates to HTML, CSS

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="portfolio.css">
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </head>
   <body>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script src = "portfolio.js"></script>
 
   <div id="nav_wrap">
-    <h1 id="logo"><img class="logoPic" src="https://pbs.twimg.com/profile_images/714987253349658625/aJiq5dd5_400x400.jpg"></h1>
+    <h1 id="logo"><img class="logoPic" src="./image/azlogo/AdamEmojiLogo.jpg"></h1>
     <nav role='navigation'>
       <a href="#" id="home">Home</a><!--
-      ---><a href="#" id="about">About</a><!--
-      ---><a href="#" id="clients">Clients</a><!--
-      ---><a href="#" id="contact">Contact Us</a>
+      ---><a href="#" id="about">About Me</a><!--
+      ---><a href="#" id="clients">Skills</a><!--
+      ---><a href="#" id="contact">Contact Me</a>
     </nav>
     <div id="social">
-      <div class="icon-facebook-sign"></div>
-      <div class="icon-twitter-sign"></div>
+      <a href="https://www.facebook.com/adam.ziegele" class="icon-facebook-sign"></a>
+      <a href="https://www.linkedin.com/in/adam-ziegele-a170764b/" class="icon-linkedin-sign"></a>
     </div><!--/social-->
   </div><!--/nav_wrap-->
 
@@ -27,27 +27,33 @@
     <!-- <div id="mainlogo">
       LOGO<br /> -->
       <div id="mainsocial">
-        <div class="icon-facebook-sign"></div>
-        <div class="icon-twitter-sign"></div>
+
+
       </div>
     </div>
   </section><!--/home-->
 
   <section id="aboutsec" class="bodysec">
     <div id="copy">
-      <h1>About</h1>
+      <h1 style="color:blue;">About Me</h1>
       <img src="http://placekitten.com/400/400" class="right">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi adipisci voluptas mollitia veritatis nesciunt soluta non minus eum quis odit iusto velit. Mollitia asperiores nam veniam aut eaque libero enim esse sunt. Id explicabo obcaecati minus animi at doloremque ratione atque sunt. Alias officiis quaerat eveniet reiciendis minima sequi accusamus ad mollitia optio totam fuga dolorem quasi facere ipsam blanditiis perspiciatis voluptatum. Temporibus quia eligendi in voluptate asperiores voluptatibus delectus consectetur eum necessitatibus perferendis aut hic vitae vel provident magni ipsa maxime. Hic harum a odit possimus laboriosam nihil qui? Inventore odio ad voluptatem explicabo accusamus omnis eum magnam saepe?Lorem ipsum dolor sit amet, consectetur adipisicing elit!<p></div>
+        <p>I'm a full-stack developer, currently taking classes at DigitalCrafts. I am passionate about coding, graphic design and learning new things. I graduated with a CIS degree from Lee University in 2014. From there I was hired by Heatco, Inc. to maintain all of their IT systems by myself. I was able to rapidly understand how business and IT work hand in hand, and was able to work on real world business problems.</p>
+        <p>About nine months ago I joined a start up company called Insiten. We help our clients transform offline processes with rapid, cloud-enabled, online solutions. We have a custom-tailored, integrated platform that delivers mobile, web, and analytic capabilities to meet any unique business requirements. Please feel free to take a look at my portfolio; your feedback is welcome! Also, make sure to connect with me on Facebook or Linkedin!</p>
+        </div>
+        <div style="text-align:center;"> <button type="button" class="btn btn-primary">My Resume</button>
+        </div>
         </section>
 
         <section id="clientsec" class="bodysec">
           <div id="copy">
-            <h1>Clients</h1>
-            <div class="center large"><div class="icon-quote-left"></div> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi adipisci voluptas. <div class="icon-quote-right"></div></div>
+            <h1 class="center">Motivation</h1>
+            <div class="center large"><div class="icon-quote-left"></div> Luck is the last dying wish of those who want to believe that winning can happen by acciedent. <div class="icon-quote-right"></div></div>
+          </br>
+          <h1 style="color:#5656B3">My Skills</h1>
             <div id="iconrow">
               <span class="icon-stack">
   <i class="icon-circle icon-stack-base"></i>
-  <i class="icon-lightbulb icon-light"></i>
+  <i class="icon-money icon-light"></i>
 </span>
                <span class="icon-stack">
   <i class="icon-circle icon-stack-base"></i>
@@ -68,7 +74,7 @@
 
         <section id="contactsec">
           <div id="copy">
-            <h1>Contact Us</h1>
+            <h1>Contact Me</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quasi optio deserunt consectetur aperiam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis porro accusantium aut ipsa eligendi quos perferendis veniam debitis rerum corporis nihil odit minus ullam deleniti dolorum! Nam itaque ipsum reiciendis. voluptate!</p>
           </div>
 
