Added new HTML & CSS

--- a/index.html
+++ b/index.html
@@ -35,46 +35,59 @@
 
   <section id="aboutsec" class="bodysec">
     <div id="copy">
-      <h1 style="color:blue;">About Me</h1>
+      <h1 style="color:#0069D9;">About Me</h1>
       <img src="http://placekitten.com/400/400" class="right">
-        <p>I'm a full-stack developer, currently taking classes at DigitalCrafts. I am passionate about coding, graphic design and learning new things. I graduated with a CIS degree from Lee University in 2014. From there I was hired by Heatco, Inc. to maintain all of their IT systems by myself. I was able to rapidly understand how business and IT work hand in hand, and was able to work on real world business problems.</p>
-        <p>About nine months ago I joined a start up company called Insiten. We help our clients transform offline processes with rapid, cloud-enabled, online solutions. We have a custom-tailored, integrated platform that delivers mobile, web, and analytic capabilities to meet any unique business requirements. Please feel free to take a look at my portfolio; your feedback is welcome! Also, make sure to connect with me on Facebook or Linkedin!</p>
+        <p>I'm a <strong>full-stack developer</strong>, currently taking classes at <strong>DigitalCrafts</strong>. I am passionate about coding, graphic design and learning new things. I graduated with a CIS degree from <strong>Lee University</strong> in 2014. From there I was hired by Heatco, Inc. as a <strong>Systems Analyst</strong> My responsibility was to maintain, update, and fix any and all of their IT dillemas. That enabled me to rapidly understand how business and IT work hand in hand, and was able to work on real world business problems.</p>
+        <p>About nine months ago I joined a start up company called <strong>Insiten</strong>. We help our clients transform offline processes with rapid, cloud-enabled, online solutions. We have a custom-tailored, integrated platform that delivers mobile, web, and analytic capabilities to meet any unique business requirements. Please feel free to take a look at my <strong>resume</strong>; your feedback is welcome! Also, make sure to connect with me on <strong>Facebook</strong> or <strong>Linkedin</strong>!</p>
         </div>
-        <div style="text-align:center;"> <button type="button" class="btn btn-primary">My Resume</button>
+        <div style="text-align:center;"> <a href="https://drive.google.com/file/d/0B4GnzaFWNyIeaENkcGhJSEpXRnc/view" class="btn btn-primary" role="button">My Resume</a>
         </div>
         </section>
 
         <section id="clientsec" class="bodysec">
           <div id="copy">
-            <h1 class="center">Motivation</h1>
+            <h1 class="center">Daily Motivation</h1></br>
             <div class="center large"><div class="icon-quote-left"></div> Luck is the last dying wish of those who want to believe that winning can happen by acciedent. <div class="icon-quote-right"></div></div>
           </br>
-          <h1 style="color:#5656B3">My Skills</h1>
-            <div id="iconrow">
+          <h1 style="color:#5A0089">My Skills</h1>
+
+          <!--  <div id="iconrow">
               <span class="icon-stack">
   <i class="icon-circle icon-stack-base"></i>
-  <i class="icon-money icon-light"></i>
+  <i class="icon-code icon-light"></i>
 </span>
                <span class="icon-stack">
   <i class="icon-circle icon-stack-base"></i>
-  <i class="icon-calendar icon-light"></i>
+  <i class="icon-camera icon-light"></i>
 </span>
 
  <span class="icon-stack">
   <i class="icon-circle icon-stack-base"></i>
   <i class="icon-cogs icon-light"></i>
 </span>
-             <!-- <div class="icon-lightbulb inner-icon hoverblk"></div>-->
-             <!-- <div class="icon-calendar hoverblk"></div>-->
-<!--              <div class="icon-cogs hoverblk"></div>
--->            </div>
-          </div>
 
+             <div class="icon-lightbulb inner-icon hoverblk"></div>
+             <div class="icon-calendar hoverblk"></div>
+              <div class="icon-cogs hoverblk"></div>-->
+
+          <h1 align = "center">What i can do?</h1>
+          <ul class="skills">
+            <li class="skill" aria-label="HTML">HTML</li>
+            <li class="skill" aria-label="CSS">CSS</li>
+            <li class="skill" aria-label="Javascript">Javascript</li>
+            <li class="skill" aria-label="Php/Larval">Php or Larval</li>
+            <li class="skill" aria-label="Other">Other</li>
+          </ul>
+        </div>
+       </div>
         </section>
+      </br></br>
+
+
 
         <section id="contactsec">
           <div id="copy">
-            <h1>Contact Me</h1>
+            <h1 style="color:#B40000;">Contact Me</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quasi optio deserunt consectetur aperiam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis porro accusantium aut ipsa eligendi quos perferendis veniam debitis rerum corporis nihil odit minus ullam deleniti dolorum! Nam itaque ipsum reiciendis. voluptate!</p>
           </div>
 
